@@ -1,6 +1,7 @@
 56
 
 * New layout
+* More simple mechanism for custom cards
 
 55
 
